Fixed scape animation background misalignment

--- a/src/components/Animations/Scape/_Scape.scss
+++ b/src/components/Animations/Scape/_Scape.scss
@@ -22,10 +22,10 @@ $base-class: scape;
     z-index: -10;
 
     position: absolute;
-    width: 1800px;
-    height: 1800px;
-    top: -400px;
-    left: -170px;
+    width: 800vh;
+    height: 800vh;
+    top: -200vh;
+    left: -180vh;
 
     margin-left: auto;
     margin-right: auto;
